--- a/style.css
+++ b/style.css
@@ -110,11 +110,10 @@ main {
 
 .cardNav {
   margin: 1rem;
-  padding: 0.5rem;
+  padding: 0.1rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #000000;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 500px;
@@ -125,6 +124,19 @@ main {
 .cardNav:active{
   color: #0070f3;
   border-color: #0070f3;
+}
+
+.navStyle{
+  float: left;
+  width: 15%;
+  background: #ffffff;
+  padding: 25px;
+  
+}
+
+.navul{
+  list-style-type: none;
+  padding: 0;
 }
 
 .headerStyle {
