--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ main {
 }
 
 .headerStyle {
-  background-color: beige;
+  background-color: rgb(146, 188, 220);
   border-color: #000000;
   
 }
